<resources>
    <string name="app_name">SharedPref</string>
    <string name="action_settings">Settings</string>

    <string name="shared_prefs_button_name">Shared Preferences</string>
    <string name="enc_shared_prefs_button_name">Encrypted Shared Preferences</string>
    <string name="io_files_button_name">I/O Files</string>

    <string name="hint_user_name">User Name</string>
    <string name="silent_mode">Silent Mode</string>

    <string name="button_load">Load</string>
    <string name="button_save">Save</string>
    <string name="button_clear">Clear</string>

</resources>
