<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onShowShPref"
            android:text="@string/shared_prefs_button_name" />

        <Button
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onShowEncShPref"
            android:text="@string/enc_shared_prefs_button_name" />

        <Button
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onShowFilesIo"
            android:text="@string/io_files_button_name" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>