<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay" />




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_user_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_user_name" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_load"
                    android:layout_margin="@dimen/fab_margin"
                    android:layout_width="wrap_content"
                    android:onClick="loadValues"
                    android:layout_height="wrap_content"
                    android:text="@string/button_load" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save"
                    android:layout_margin="@dimen/fab_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="saveValues"
                    android:text="@string/button_save" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_show_directories"
                    android:layout_margin="@dimen/fab_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="saveShowDirectories"
                    android:text="directories" />


            </LinearLayout>

        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>